Support for Plus sign code fence directives - GitHub flavor
- Support plus sign (for e.g. `C++`) in file extension of fenced code block
- small spelling correction

--- a/doc/markdown.dox
+++ b/doc/markdown.dox
@@ -453,8 +453,8 @@ which will produce:
 int func(int a,int b) { return a*b; }
 ~~~~~~~~~~~~~~~
 
-The dot is optional, the curly braces are optional when the that language name begins with a
-alphabetical character and further characters are alphanumerical characters.
+The dot is optional, the curly braces are optional when the that language name begins with an
+alphabetical character and further characters are alphanumerical characters or a plus sign.
 
 Another way to denote fenced code blocks is to use 3 or more backticks (```):
 
